--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,8 @@ main {
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1️⃣ */
+    border: 1px solid rgb(0 0 0 / 0.2);
+    /* 1️⃣ */
     padding: 1rem;
     background-color: #eee;
     color: #333;
