--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+root {
+    --heading-background-color: #f60;
+    --heading-text-color: #333;
+    --heading-font: 'Montserrat', Helvetica, sans-serif;
+    --padding: 1rem;
+    --border: 1px solid rgb(0 0 0 / 0.1);
+}
+
+/* Some example variable use in the declaration*/
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -10,7 +19,10 @@ nav a {
 }
 
 h1 {
-    color: darkblue;
+    background-color: var(--heading-background-color);
+    color: var(--heading-text-color);
+    font-family: var(--heading-font);
+    padding: var(--padding);
 }
 
 img {
