--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -55,10 +55,10 @@
 
     .hero article {
         position: absolute;
-        bottom: 20px;
+        top: 100px;
         left: 20px;
         right: 20px;
-        background-color: rgba(255, 255, 255, 0.85);
+        background-color: rgba(255, 166, 0, 0.733);
         padding: 16px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
